--- a/hono-serina/package.json
+++ b/hono-serina/package.json
@@ -4,7 +4,9 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "mysql2": "^3.14.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
